[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "angry_api_service"
version = "0.1.0"
description = "A CLI application for running Angry API web service"
readme = "README.md"
authors = [{ name = "Ilgiz Duseev", email = "ilgiz.duseev@yandex.ru" }]
license = {text = "MIT License"}
requires-python = ">=3.11"
dependencies = [
    "click>=8",
    "aiohttp>=3",
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-aiohttp",
    "pytest-asyncio"
]

[project.scripts]
run_server = "backend.cli:run_server"